# ElectricityMaps

./: .gitignore  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml  rag_architecture_design.md  usecase_description.md
.github/workflows/: ci.yml
config/: env_dev.properties  env_prod.properties  env_test.properties
dags/: bronze_dag.py  gold_dag.py  silver_dag.py
notebooks/: 01_api_exploration.ipynb  02_bronze_ingestion.ipynb  03_silver_transform.ipynb  04_gold_aggregation.ipynb  05_query_delta_sql.ipynb  06_rag_chatbot.ipynb
src/electricity_maps/: __init__.py  config.py
src/electricity_maps/api/: __init__.py  client.py  models.py
src/electricity_maps/layers/: __init__.py  bronze.py  gold.py  silver.py
src/electricity_maps/schemas/: __init__.py  gold_schemas.py  silver_schemas.py
src/electricity_maps/utils/: __init__.py  helpers.py  logging.py  partitioning.py  state.py
tests/: conftest.py  test_api_client.py  test_bronze.py  test_gold.py  test_silver.py  test_state.py
