[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "electricity-maps-etl"
version = "0.1.0"
description = "ETL pipeline for Electricity Maps data (France) — Bronze/Silver/Gold medallion architecture"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Mohan Tee" },
]

dependencies = [
    # Data processing
    "polars>=1.0",
    "deltalake>=0.18",
    "duckdb>=1.0",
    
    # API client
    "httpx>=0.27",
    "tenacity>=8.0",
    
    # Validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandera[polars]>=0.20",
    
    # Config
    "python-dotenv>=1.0",
    
    # Logging
    "structlog>=24.0",
    "pyarrow>=24.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.9",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
rag = [
    "chromadb>=0.5",
    "openai>=1.0",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-chroma>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "electricity-maps-etl[airflow,notebook,rag,dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/electricity_maps"]

# --- Tool configs ---

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["electricity_maps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
